# ghostpost-backend

./: .gitignore  README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
ghostpost/: settings.py  urls.py
